--- a/CLM_CS197.ipynb
+++ b/CLM_CS197.ipynb
@@ -212,10 +212,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "R5PWuJ9vN6_i"
       },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+          ]
+        }
+      ],
+      "source": [
+        "from transformers import AutoTokenizer\n",
+        "model_checkpoint = \"distilgpt2\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint, use_fast=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['This', 'Ġtoken', 'izer', 'Ġis', 'Ġbeing', 'Ġapplied', 'Ġin', 'ĠCS', '197', 'Ġat', 'Har', 'vard', '.', '<|endoftext|>']\n"
+          ]
+        }
+      ],
+      "source": [
+        "sequence = (\"This tokenizer is being applied in CS197 at\"\n",
+        "            \"Harvard.<|endoftext|>\")\n",
+        "tokens = tokenizer.tokenize(sequence)\n",
+        "print(tokens)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
