tokenization function for dataset added

--- a/CLM_CS197.ipynb
+++ b/CLM_CS197.ipynb
@@ -91,8 +91,8 @@
           "text": [
             "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
             "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "Generating train split: 100%|██████████| 87599/87599 [00:00<00:00, 418753.50 examples/s]\n",
-            "Generating validation split: 100%|██████████| 10570/10570 [00:00<00:00, 383000.10 examples/s]\n"
+            "Generating train split: 100%|██████████| 87599/87599 [00:00<00:00, 421068.07 examples/s]\n",
+            "Generating validation split: 100%|██████████| 10570/10570 [00:00<00:00, 396904.12 examples/s]\n"
           ]
         },
         {
@@ -161,8 +161,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Map: 100%|██████████| 87599/87599 [00:01<00:00, 56146.69 examples/s]\n",
-            "Map: 100%|██████████| 10570/10570 [00:00<00:00, 50014.21 examples/s]\n"
+            "Map: 100%|██████████| 87599/87599 [00:00<00:00, 92300.71 examples/s]\n",
+            "Map: 100%|██████████| 10570/10570 [00:00<00:00, 92567.45 examples/s]\n"
           ]
         }
       ],
@@ -212,21 +212,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "R5PWuJ9vN6_i"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer\n",
         "model_checkpoint = \"distilgpt2\"\n",
@@ -235,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -251,6 +241,72 @@
         "            \"Harvard.<|endoftext|>\")\n",
         "tokens = tokenizer.tokenize(sequence)\n",
         "print(tokens)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1212, 11241, 7509, 318, 852, 5625, 287, 9429, 24991, 379, 13587, 10187, 13, 50256]\n"
+          ]
+        }
+      ],
+      "source": [
+        "ids = tokenizer.convert_tokens_to_ids(tokens)\n",
+        "print(ids)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'input_ids': [1212, 11241, 7509, 318, 852, 5625, 287, 9429, 24991, 379, 13587, 10187, 13, 50256], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sequence = (\"This tokenizer is being applied in CS197 at\"\n",
+        "            \"Harvard.<|endoftext|>\")\n",
+        "tokenizer(sequence)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Map (num_proc=4): 100%|██████████| 87599/87599 [00:01<00:00, 71225.39 examples/s]\n",
+            "Map (num_proc=4): 100%|██████████| 10570/10570 [00:00<00:00, 53722.69 examples/s]\n"
+          ]
+        }
+      ],
+      "source": [
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"question\"], truncation=True)\n",
+        "\n",
+        "tokenized_datasets = dataset.map(\n",
+        "    tokenize_function,\n",
+        "    batched=True,\n",
+        "    num_proc=4,\n",
+        "    remove_columns=[\"question\"]\n",
+        ")"
       ]
     },
     {
