train and eval sets created

--- a/CLM_CS197.ipynb
+++ b/CLM_CS197.ipynb
@@ -285,28 +285,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"question\"], truncation=True)\n",
+        "\n",
+        "tokenized_dataset = dataset.map(\n",
+        "    tokenize_function,\n",
+        "    batched=True,\n",
+        "    num_proc=4,\n",
+        "    remove_columns=[\"question\"]\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "DatasetDict({\n",
+              "    train: Dataset({\n",
+              "        features: ['input_ids', 'attention_mask'],\n",
+              "        num_rows: 87599\n",
+              "    })\n",
+              "    validation: Dataset({\n",
+              "        features: ['input_ids', 'attention_mask'],\n",
+              "        num_rows: 10570\n",
+              "    })\n",
+              "})"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tokenized_dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Map (num_proc=4): 100%|██████████| 87599/87599 [00:01<00:00, 71225.39 examples/s]\n",
-            "Map (num_proc=4): 100%|██████████| 10570/10570 [00:00<00:00, 53722.69 examples/s]\n"
+            "Map (num_proc=4): 100%|██████████| 87599/87599 [00:01<00:00, 85865.62 examples/s] \n",
+            "Map (num_proc=4): 100%|██████████| 10570/10570 [00:00<00:00, 56979.33 examples/s]\n"
           ]
         }
       ],
       "source": [
-        "def tokenize_function(examples):\n",
-        "    return tokenizer(examples[\"question\"], truncation=True)\n",
+        "block_size = 128\n",
         "\n",
-        "tokenized_datasets = dataset.map(\n",
-        "    tokenize_function,\n",
+        "def group_texts(examples):\n",
+        "    # repeat concatenation for input_ids and other keys\n",
+        "    concatenated_examples = {k: sum(examples[k], []) for k in\n",
+        "                            examples.keys()}\n",
+        "    total_length = len(concatenated_examples[list(examples.keys())[0]])\n",
+        "    total_length = (total_length // block_size) * block_size\n",
+        "\n",
+        "    # populate each of input_ids and other keys \n",
+        "    result = {\n",
+        "        k: [t[i : i + block_size] for i in range(0,\n",
+        "            total_length, block_size)]\n",
+        "        for k, t in concatenated_examples.items()\n",
+        "    }\n",
+        "    # add labels because we'll need it as the output\n",
+        "    result[\"labels\"] = result[\"input_ids\"].copy()\n",
+        "    return result\n",
+        "\n",
+        "lm_datasets = tokenized_dataset.map(\n",
+        "    group_texts,\n",
         "    batched=True,\n",
+        "    batch_size=1000,\n",
         "    num_proc=4,\n",
-        "    remove_columns=[\"question\"]\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- The code takes a dataset of tokenized text and processes it into fixed-length sequences (blocks) of 128 tokens each. \n",
+        "- The labels are set to be the same as the input_ids, which is typical for language modeling tasks where the model is trained to predict the next token in the sequence."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[2514, 4150, 750, 262, 5283, 5335, 7910, 1656, 287, 1248, 3365, 287, 406, 454, 8906, 4881, 30, 50256, 2061, 318, 287, 2166, 286, 262, 23382, 20377, 8774, 11819, 30, 50256, 464, 32520, 3970, 286, 262, 17380, 2612, 379, 23382, 20377, 318, 13970, 284, 543, 4645, 30, 50256, 2061, 318, 262, 10299, 33955, 379, 23382, 20377, 30, 50256, 2061, 10718, 319, 1353, 286, 262, 8774, 11819, 379, 23382, 20377, 30, 50256, 2215, 750, 262, 3059, 349, 3477, 11175, 286, 23382, 288, 480, 2221, 12407, 30, 50256, 2437, 1690, 318, 23382, 20377, 338, 262, 39296, 1754, 3199, 30, 50256, 2061, 318, 262, 4445, 3710, 3348, 379, 23382, 20377, 1444, 30, 50256, 2437, 867, 3710, 1705, 9473, 389, 1043, 379, 23382, 20377, 30, 50256, 818, 644, 614, 750, 262, 3710, 3348]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(lm_datasets['train']['input_ids'][0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "\"To whom did the Virgin Mary allegedly appear in 1858 in Lourdes France?<|endoftext|>What is in front of the Notre Dame Main Building?<|endoftext|>The Basilica of the Sacred heart at Notre Dame is beside to which structure?<|endoftext|>What is the Grotto at Notre Dame?<|endoftext|>What sits on top of the Main Building at Notre Dame?<|endoftext|>When did the Scholastic Magazine of Notre dame begin publishing?<|endoftext|>How often is Notre Dame's the Juggler published?<|endoftext|>What is the daily student paper at Notre Dame called?<|endoftext|>How many student news papers are found at Notre Dame?<|endoftext|>In what year did the student paper\""
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tokenizer.decode(lm_datasets['train']['input_ids'][0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "small_train_dataset = lm_datasets[\"train\"].shuffle(seed=42).select(range(100))\n",
+        "small_eval_dataset = lm_datasets[\"validation\"].shuffle(seed=42).select(range(100))"
       ]
     },
     {
