finetuning training done and model pushed to hub

--- a/CLM_CS197.ipynb
+++ b/CLM_CS197.ipynb
@@ -90,9 +90,7 @@
           "output_type": "stream",
           "text": [
             "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "Generating train split: 100%|██████████| 87599/87599 [00:00<00:00, 421068.07 examples/s]\n",
-            "Generating validation split: 100%|██████████| 10570/10570 [00:00<00:00, 396904.12 examples/s]\n"
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
           ]
         },
         {
@@ -156,16 +154,7 @@
         "id": "wXQZ-_bANLLx",
         "outputId": "0215d3c2-fd39-441e-9d9d-51bedca42969"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Map: 100%|██████████| 87599/87599 [00:00<00:00, 92300.71 examples/s]\n",
-            "Map: 100%|██████████| 10570/10570 [00:00<00:00, 92567.45 examples/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def add_end_of_text(example):\n",
         "    example['question'] =  example['question'] + '<|endoftext|>'\n",
@@ -285,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -302,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -320,7 +309,7 @@
               "})"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -331,18 +320,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Map (num_proc=4): 100%|██████████| 87599/87599 [00:01<00:00, 85865.62 examples/s] \n",
-            "Map (num_proc=4): 100%|██████████| 10570/10570 [00:00<00:00, 56979.33 examples/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "block_size = 128\n",
         "\n",
@@ -381,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -398,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +387,7 @@
               "\"To whom did the Virgin Mary allegedly appear in 1858 in Lourdes France?<|endoftext|>What is in front of the Notre Dame Main Building?<|endoftext|>The Basilica of the Sacred heart at Notre Dame is beside to which structure?<|endoftext|>What is the Grotto at Notre Dame?<|endoftext|>What sits on top of the Main Building at Notre Dame?<|endoftext|>When did the Scholastic Magazine of Notre dame begin publishing?<|endoftext|>How often is Notre Dame's the Juggler published?<|endoftext|>What is the daily student paper at Notre Dame called?<|endoftext|>How many student news papers are found at Notre Dame?<|endoftext|>In what year did the student paper\""
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -418,12 +398,166 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
         "small_train_dataset = lm_datasets[\"train\"].shuffle(seed=42).select(range(100))\n",
         "small_eval_dataset = lm_datasets[\"validation\"].shuffle(seed=42).select(range(100))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import AutoModelForCausalLM, TrainingArguments, Trainer\n",
+        "\n",
+        "model = AutoModelForCausalLM.from_pretrained(\"distilgpt2\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='39' max='39' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [39/39 01:02, Epoch 3/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>3.727476</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>3.552344</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>3.493365</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=39, training_loss=3.8724075708633814, metrics={'train_runtime': 69.9624, 'train_samples_per_second': 4.288, 'train_steps_per_second': 0.557, 'total_flos': 9798628147200.0, 'train_loss': 3.8724075708633814, 'epoch': 3.0})"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    f\"{model_checkpoint}-squad\",\n",
+        "    evaluation_strategy=\"epoch\",\n",
+        "    learning_rate=2e-5,\n",
+        "    weight_decay=0.01,\n",
+        "    push_to_hub=True,\n",
+        ")\n",
+        "\n",
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=small_train_dataset,\n",
+        "    eval_dataset=small_eval_dataset,\n",
+        ")\n",
+        "\n",
+        "trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='13' max='13' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [13/13 00:05]\n",
+              "    </div>\n",
+              "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Perplexity: 32.90\n"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "eval_results = trainer.evaluate()\n",
+        "print(f\"Perplexity: {math.exp(eval_results['eval_loss']):.2f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "CommitInfo(commit_url='https://huggingface.co/samz905/distilgpt2-squad/commit/b725f5fc6cb6acd2f7d39dc334b1cd5da25912d6', commit_message='Upload model', commit_description='', oid='b725f5fc6cb6acd2f7d39dc334b1cd5da25912d6', pr_url=None, repo_url=RepoUrl('https://huggingface.co/samz905/distilgpt2-squad', endpoint='https://huggingface.co', repo_type='model', repo_id='samz905/distilgpt2-squad'), pr_revision=None, pr_num=None)"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tokenizer.save_pretrained(f\"{model_checkpoint}-squad\")\n",
+        "model.push_to_hub(f\"{model_checkpoint}-squad\")"
       ]
     },
     {
