--- a/CLM_CS197.ipynb
+++ b/CLM_CS197.ipynb
@@ -541,23 +541,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "CommitInfo(commit_url='https://huggingface.co/samz905/distilgpt2-squad/commit/b725f5fc6cb6acd2f7d39dc334b1cd5da25912d6', commit_message='Upload model', commit_description='', oid='b725f5fc6cb6acd2f7d39dc334b1cd5da25912d6', pr_url=None, repo_url=RepoUrl('https://huggingface.co/samz905/distilgpt2-squad', endpoint='https://huggingface.co', repo_type='model', repo_id='samz905/distilgpt2-squad'), pr_revision=None, pr_num=None)"
+              "CommitInfo(commit_url='https://huggingface.co/samz905/distilgpt2-squad/commit/9e47bb3f7e4fff983417b407db9b24a5f2cab279', commit_message='Upload tokenizer', commit_description='', oid='9e47bb3f7e4fff983417b407db9b24a5f2cab279', pr_url=None, repo_url=RepoUrl('https://huggingface.co/samz905/distilgpt2-squad', endpoint='https://huggingface.co', repo_type='model', repo_id='samz905/distilgpt2-squad'), pr_revision=None, pr_num=None)"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "# Save the model and tokenizer to the same local directory\n",
+        "model.save_pretrained(f\"{model_checkpoint}-squad\")\n",
         "tokenizer.save_pretrained(f\"{model_checkpoint}-squad\")\n",
-        "model.push_to_hub(f\"{model_checkpoint}-squad\")"
+        "\n",
+        "# Push the entire directory to the Hugging Face Hub\n",
+        "model.push_to_hub(f\"{model_checkpoint}-squad\")\n",
+        "tokenizer.push_to_hub(f\"{model_checkpoint}-squad\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+        "model = AutoModelForCausalLM.from_pretrained(f\"samz905/{model_checkpoint}-squad\")\n",
+        "tokenizer = AutoTokenizer.from_pretrained(f\"samz905/{model_checkpoint}-squad\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+            "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A speedrun is a playthrough of a video game, or section of a video game, with the goal of completing it as fast as possible. Speedruns often follow planned routes, which may incorporate sequence breaking, and might exploit glitches that allow sections to be skipped or completed more quickly than intended. What is the speedrun?<|endoftext|><|endoftext|><|endoftext|>\n"
+          ]
+        }
+      ],
+      "source": [
+        "start_text = (\"A speedrun is a playthrough of a video game, \\\n",
+        "or section of a video game, with the goal of \\\n",
+        "completing it as fast as possible. Speedruns \\\n",
+        "often follow planned routes, which may incorporate sequence \\\n",
+        "breaking, and might exploit glitches that allow sections to \\\n",
+        "be skipped or completed more quickly than intended. \")\n",
+        "\n",
+        "prompt = \"What is the\"\n",
+        "inputs = tokenizer(\n",
+        "     start_text + prompt,\n",
+        "     add_special_tokens=False,\n",
+        "     return_tensors=\"pt\")[\"input_ids\"]\n",
+        "\n",
+        "prompt_length = len(tokenizer.decode(inputs[0]))\n",
+        "outputs = model.generate(\n",
+        "     inputs,\n",
+        "     max_length=100,\n",
+        "     do_sample=True,\n",
+        "     top_k=50,\n",
+        "     top_p=0.95,\n",
+        "     temperature=0.9,\n",
+        "     num_return_sequences=3)\n",
+        "\n",
+        "generated = prompt + tokenizer.decode(outputs[0])[prompt_length + 1:]\n",
+        "\n",
+        "print(tokenizer.decode(outputs[0]))"
       ]
     },
     {
