vision transformer implemented

--- a/vision_transformer_finetune.ipynb
+++ b/vision_transformer_finetune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170M/170M [00:20<00:00, 8.12MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATASET_PATH = os.environ.get(\"PATH_DATASETS\", \"data/\")\n",
     "\n",
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +198,113 @@
     "    ax[i].axis(\"off\")\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.backends.cudnn.determinstic = True\n",
+    "torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "device = torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "print(\"Device:\", device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class AttentionBlock(nn.Module):\n",
+    "    def __init__(self, embed_dim, hidden_dim, num_heads, dropout=0.0):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.layer_norm_1 = nn.LayerNorm(embed_dim)\n",
+    "        self.attn = nn.MultiheadAttention(embed_dim, num_heads)\n",
+    "        self.layer_norm_2 = nn.LayerNorm(embed_dim)\n",
+    "        self.linear = nn.Sequential(\n",
+    "            nn.Linear(embed_dim, hidden_dim),\n",
+    "            nn.GELU(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(hidden_dim, embed_dim),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        inp_x = self.layer_norm_1(x)\n",
+    "        x = x + self.attn(inp_x, inp_x, inp_x)[0]\n",
+    "        x = x + self.linear(self.layer_norm_2(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VisionTransformer(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        embed_dim,\n",
+    "        hidden_dim,\n",
+    "        num_channels,\n",
+    "        num_heads,\n",
+    "        num_layers,\n",
+    "        num_classes,\n",
+    "        patch_size,\n",
+    "        num_patches,\n",
+    "        dropout=0.0,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.patch_size = patch_size\n",
+    "\n",
+    "        # Layers/Networks\n",
+    "        self.input_layer = nn.Linear(\n",
+    "            num_channels * (patch_size**2), embed_dim)\n",
+    "        self.transformer = nn.Sequential(\n",
+    "            *(AttentionBlock(\n",
+    "                embed_dim, hidden_dim, num_heads, dropout=dropout)\n",
+    "                    for _ in range(num_layers))\n",
+    "        )\n",
+    "        self.mlp_head = nn.Sequential(\n",
+    "            nn.LayerNorm(embed_dim), nn.Linear(embed_dim, num_classes))\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "        # Parameters/Embeddings\n",
+    "        self.cls_token = nn.Parameter(\n",
+    "            torch.randn(1, 1, embed_dim))\n",
+    "        self.pos_embedding = nn.Parameter(\n",
+    "            torch.randn(1, 1 + num_patches, embed_dim))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = img_to_patch(x, self.patch_size)\n",
+    "        B, T, _ = x.shape\n",
+    "        x = self.input_layer(x)\n",
+    "\n",
+    "        cls_token = self.cls_token.repeat(B, 1, 1)\n",
+    "        x = torch.cat([cls_token, x], dim=1)\n",
+    "        x = x + self.pos_embedding[:, : T + 1]\n",
+    "        x = self.dropout(x)\n",
+    "        x = x.transpose(0, 1)\n",
+    "        x = self.transformer(x)\n",
+    "        cls = x[0]\n",
+    "        out = self.mlp_head(cls)\n",
+    "        return out"
    ]
   },
   {
