--- a/vision_transformer_finetune.ipynb
+++ b/vision_transformer_finetune.ipynb
@@ -309,6 +309,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "class ViT(pl.LightningModule):\n",
+    "    def __init__(self, model_kwargs, lr):\n",
+    "        super().__init__()\n",
+    "        self.save_hyperparameters()\n",
+    "        self.model = VisionTransformer(**model_kwargs)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.model(x)\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = optim.AdamW(self.parameters(), lr=self.hparams.lr)\n",
+    "        lr_scheduler = optim.lr_scheduler.MultiStepLR(\n",
+    "            optimizer, milestones=[100, 150], gamma=0.1)\n",
+    "        return [optimizer], [lr_scheduler]\n",
+    "\n",
+    "    def _calculate_loss(self, batch, mode=\"train\"):\n",
+    "        imgs, labels = batch\n",
+    "        preds = self.model(imgs)\n",
+    "        loss = F.cross_entropy(preds, labels)\n",
+    "        acc = (preds.argmax(dim=-1) == labels).float().mean()\n",
+    "\n",
+    "        self.log(\"%s_loss\" % mode, loss, prog_bar=True)\n",
+    "        self.log(\"%s_acc\" % mode, acc, prog_bar=True)\n",
+    "        return loss\n",
+    "\n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "        loss = self._calculate_loss(batch, mode=\"train\")\n",
+    "        return loss\n",
+    "\n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "        self._calculate_loss(batch, mode=\"val\")\n",
+    "\n",
+    "    def test_step(self, batch, batch_idx):\n",
+    "        self._calculate_loss(batch, mode=\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CHECKPOINT_PATH = os.environ.get(\n",
+    "    \"PATH_CHECKPOINT\",\n",
+    "    \"saved_models/VisionTransformers/\")\n",
+    "\n",
+    "def train_model(**kwargs):\n",
+    "    trainer = pl.Trainer(\n",
+    "        default_root_dir=os.path.join(CHECKPOINT_PATH, \"ViT\"),\n",
+    "        fast_dev_run=5,\n",
+    "    )\n",
+    "\n",
+    "    pl.seed_everything(42)  # To be reproducible\n",
+    "    model = ViT(**kwargs)\n",
+    "    trainer.fit(model, train_loader, val_loader)\n",
+    "    test_result = trainer.test(\n",
+    "        model, dataloaders=test_loader, verbose=False)\n",
+    "    return model, test_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True (mps), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:76: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
+      "Running in `fast_dev_run` mode: will run the requested loop using 5 batch(es). Logging and checkpointing is suppressed.\n",
+      "Seed set to 42\n",
+      "\n",
+      "  | Name  | Type              | Params | Mode \n",
+      "----------------------------------------------------\n",
+      "0 | model | VisionTransformer | 3.2 M  | train\n",
+      "----------------------------------------------------\n",
+      "3.2 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "3.2 M     Total params\n",
+      "12.781    Total estimated model params size (MB)\n",
+      "73        Modules in train mode\n",
+      "0         Modules in eval mode\n",
+      "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:425: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n",
+      "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:425: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f05238a633e4962b09b82fb3cfa3480",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1439b8f592c946299090f5a8dbae3f26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_steps=5` reached.\n",
+      "/Users/samarthzalte/miniconda3/envs/env/lib/python3.13/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:425: The 'test_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90ebbbab6dc94de1845b7745fed48732",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results [{'test_loss': 2.3835947513580322, 'test_acc': 0.22499999403953552}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model, results = train_model(\n",
+    "    model_kwargs={\n",
+    "        \"embed_dim\": 256,\n",
+    "        \"hidden_dim\": 512,\n",
+    "        \"num_heads\": 8,\n",
+    "        \"num_layers\": 6,\n",
+    "        \"patch_size\": 4,\n",
+    "        \"num_channels\": 3,\n",
+    "        \"num_patches\": 64,\n",
+    "        \"num_classes\": 10,\n",
+    "        \"dropout\": 0.2,\n",
+    "    },\n",
+    "    lr=3e-4,\n",
+    ")\n",
+    "print(\"Results\", results)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
